Dev/src/FinancialForce Revenue Management/objects/RecognitionPeriod__c.object
<CustomObject>
    <customHelpPage>helprevrecrecognitionperiod</customHelpPage>
    <description>Contains the recognition periods used by Revenue Recognition calculations.</description>
    <fields>
        <fullName>CustomName__c</fullName>
        <label>Custom Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfWeeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodNumber__c</fullName>
        <label>Period Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Group__c</fullName>
        <description>Grouping periods into quarters</description>
        <label>Period Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecognitionYear__c</fullName>
        <label>Recognition Year</label>
        <referenceTo>RecognitionYear__c</referenceTo>
        <relationshipLabel>Recognition Periods</relationshipLabel>
        <relationshipName>Recognition_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Recognition Period</label>
    <nameField>
        <label>Recognition Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recognition Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>